Fixed JavaFX module startup warning (added to README)